# vulkan

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Vulkan.sln
Include/STB/: README.md
Lib/: assimp-vc142-mt.lib
Lib/Assimp/x64/: assimp-vc142-mt.lib  libassimp.lib
Lib/Assimp/x86/: assimp-vc142-mt.lib  libassimp.lib
Models/: Ar2r-Devil-Pinky.dae  Ar2r-Devil-Pinky.fbx  Ar2rDevilPinky.dae  bed.dae  cylinder.dae
Shaders/: base-pbr.frag  base-pbr.frag.spv  base-phong.frag  base-phong.frag.spv  base-phong.geom  base-phong.geom.spv  base-phong.vert  base-phong.vert.spv  base.frag  base.frag.spv  base.geom  base.geom.spv  base.vert  base.vert.spv  compile.bat  post-process.frag  post-process.frag.spv  post-process.vert  post-process.vert.spv  raytrace-shadow.rmiss.spv  raytrace.rchit  raytrace.rchit.spv  raytrace.rgen  raytrace.rgen.spv  raytrace.rmiss  raytrace.rmiss.spv
Sources/: Program.cpp  Sources.vcxproj  Sources.vcxproj.filters  Toolkit.cpp  Toolkit.h  VkRenderer.cpp  VkRenderer.h  VkToolkit.cpp  VkToolkit.h
Sources/SampleApp/: CMakeLists.txt  Main.cpp  Tools.hpp  VkHelpers.cpp  VkHelpers.h  VkRenderer.cpp  VkRenderer.h  VkTools.cpp  VkTools.h  VkToolsBuffer.hpp  VkToolsDevice.hpp  VkToolsFrameBuffer.hpp  VkToolsGeometryBuffer.hpp  VkToolsImage.hpp  VkToolsTextureBuffer.hpp
Sources/SampleApp/Scene/: Camera.h  Mesh.cpp  Mesh.h  SceneElement.cpp  SceneElement.h
Sources/SampleApp/Tools/: Camera.hpp  Timer.hpp  Tools.hpp
Sources/SampleApp/VkExtensionLoader/: ExtensionLoader.c
Sources/SampleApp/VkResources/: FrameBuffer.hpp  GeometryBuffer.hpp  TextureBuffer.hpp
Sources/SampleApp/VkScene/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  LightSourceSet.hpp  Mesh.cpp  Mesh.h  MeshSkeleton.hpp  MeshSkeletonAnimation.hpp  SceneElement.cpp  SceneElement.h  Skeleton.cpp  Skeleton.h  SkeletonBone.cpp  SkeletonBone.h
Sources/SampleApp/VkTools/: Buffer.hpp  Device.hpp  Image.hpp  Tools.cpp  Tools.h
Sources/SampleApp/ext_loader/: vulkan_ext.c
Textures/Bed/: Texture.tga  TextureStained.tga
